[tool.poetry]
name = "english-language-learning"
version = "0.1.0"
description = ""
authors = ["3gee <huangbaochenwo@live.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "english_language_learning"}]

[tool.poetry.dependencies]
python = "^3.10"
sphinx = "^5.3.0"
myst-parser = "^0.18.1"
sphinxcontrib-mermaid = "^0.7.1"
sphinx-press-theme = "^0.8.0"
linkify = "^1.4"
piccolo-theme = "^0.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
